--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -70,7 +70,7 @@ background-position: center;
                         <strong>¡Oh no!</strong> Las credenciales son invalidas
                     </div>
                     <div *ngIf='loginStatus==2' class="alert-login alert alert-success alert-dismissible fade show mt-3" role="alert">
-                        <strong>¡Genial!</strong> Inicio de sesion correcto
+                        <strong>¡Genial!</strong> Inicio de sesion correcto. Redirigiendo...
                     </div>
                 </div>
             </div>
